feat(deploy): configure production integration for Render, Aiven MySQL SSL, and Vite API client